# vcrtool

./: .pre-commit-config.yaml  .pylintrc  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  NOTES.md  README.md  capture_stereo.py  jlip_presence_check.py  package.json  pyproject.toml  sh.tat.vcrtool.yml  sircs.py  snapcraft.yaml  vcrtool.py
.claude/agents/: click-auditor.md  coverage-improver.md  docstring-fixer.md  mypy-fixer.md  python-expert.md  regen.md  release.md  test-writer.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.github/instructions/: general.instructions.md
.github/workflows/: appimage.yml  flatpak.yml  pyinstaller.yml  qa.yml  snap.yml  tests.yml
.stubs/pytimeparse/: timeparse.pyi
.stubs/serial/: __init__.pyi
docs/: badges.rst  conf.py  index.rst  lib.rst  notes.rst  sircs.rst
ksy/: jlip_command.ksy  jlip_response.ksy
man/: vcrtool.1
tests/: test_capture_stereo.py  test_jlip.py  test_main.py  test_sansio.py  test_sircs.py  test_utils.py
vcrtool/: __init__.py  __main__.py  capture_stereo.py  jlip.py  main.py  sansio.py  sircs.py  utils.py
