[tool.poetry]
name = "vcrtool"
version = "0.0.1"
description = "Tool for me."
authors = ["Andrew Udvare <audvare@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
click = "^8.1.3"
pyrate-limiter = "^2.10.0"
pytimeparse = "^1.1.8"
loguru = "^0.6.0"
psutil = "^5.9.4"
pyftdi = "^0.54.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.3"
pylint-quotes = "^0.2.3"
toml = "^0.10.2"

[tool.poetry.scripts]
capture-stereo = 'capture_stereo:main'
jlip-presence-check = 'jlip_presence_check:main'
sircs = 'sircs:main'
vcrtool = 'vcrtool:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
